--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "bson": "^6.8.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-handlebars": "3.0",
+    "mongodb": "^6.8.0",
     "mysql2": "^3.10.2",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3"
