--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "bson": "^6.8.0",
+    "connect-mongodb-session": "^5.0.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-handlebars": "3.0",
+    "express-session": "^1.18.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
     "mysql2": "^3.10.2",
