--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bson": "^6.8.0",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^5.0.0",
+    "csurf": "^1.11.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-handlebars": "3.0",
