--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express-validator": "^7.1.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.2",
+    "pdfkit": "^0.15.0",
     "pug": "^3.0.3",
     "sequelize": "^6.37.3"
   }
