--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "mysql2": "^3.10.2",
     "pdfkit": "^0.15.0",
     "pug": "^3.0.3",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "uniqid": "^5.3.0",
+    "uuid": "^8.3.2"
   }
 }
